--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,12 +1,15 @@
 .button {
-  padding: 0.25rem 0.5rem;
+  padding: 0.75rem 1rem;
   font-size: 1rem;
   font-family: Helvetica, Arial, sans-serif;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   background: deeppink;
   color: #fff;
   cursor: pointer;
   position: relative;
+  max-width: 18rem;       /* added to solve long strings */
+  word-break: break-word; /* added to solve no spaces */
+  word-wrap: break-word;
 }
 
 .button:focus,
